--- a/vr/index.html
+++ b/vr/index.html
@@ -7,12 +7,12 @@
 <body>
     <a-scene>
         <a-assets>
-            <a-assets-item id="object" src="./assets/pokeball-vray.obj"></a-assets-item>
-            <a-assets-item id="material" src="./assets/pokeball-vray.mtl"></a-assets-item>
+            <a-assets-item id="object" src="./assets/pokemonball.obj"></a-assets-item>
+            <a-assets-item id="material" src="./assets/pokemonball.mtl"></a-assets-item>
         </a-assets>
 
         <a-obj-model src="#object" mtl="#material"></a-obj-model>
-        <a-entity position="0 200 150">
+        <a-entity position="0 250 150">
             <a-camera></a-camera>
         </a-entity>
     </a-scene>
